handler for the async best-price was added
