# docs/swagger.yaml
@@ -236,6 +236,78 @@ paths:
       summary: best price filtering
       tags:
       - Price-Filters
+  /products/filter/price/best-price/async:
+    post:
+      description: this endpoint provides filtering products from marketplaces with
+        the best and minimum price in async mode
+      parameters:
+      - collectionFormat: ssv
+        description: the exact query string
+        example: iphone+11
+        in: query
+        items:
+          type: string
+        minLength: 1
+        name: query
+        required: true
+        type: array
+      - collectionFormat: ssv
+        description: the list of the markets using for search
+        example: megamarket+wildberries
+        in: query
+        items:
+          enum:
+          - wildberries
+          - megamarket
+          type: string
+        minLength: 1
+        name: markets
+        required: true
+        type: array
+      - default: 1
+        description: the num of products' sample
+        in: query
+        minimum: 1
+        name: sample
+        type: integer
+      - default: popular
+        description: the type of products' sample sorting
+        enum:
+        - popular
+        - pricedown
+        - priceup
+        - newly
+        in: query
+        name: sort
+        type: string
+      - default: 1
+        description: the flag that defines 'Should image links be parsed?'
+        enum:
+        - 0
+        - 1
+        in: query
+        name: no-image
+        type: integer
+      - default: min
+        description: the amount of the products in response's sample
+        enum:
+        - min
+        - max
+        in: query
+        name: amount
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/chttp.ResponseErr'
+      summary: async best price filtering
+      tags:
+      - Price-Filters
   /products/filter/price/exact-price:
     get:
       description: this endpoint provides filtering products from marketplaces with
